# Memorama

./: CMakeLists.txt  INSTALL.md  README.md  run.bat
data/: banco.txt
include/: Carta.h  Configuracion.h  EstadoJuego.h  EstrategiaPuntuacion.h  Nivel.h  ReglasPareja.h  TablaLideres.h
src/: Carta.cpp  Configuracion.cpp  EstadoJuego.cpp  ReglasPareja.cpp  TablaLideres.cpp  main.cpp
